# srs-sqlite

./: .gitignore  README.md  pyproject.toml  run.py
dev/: add_table.py  get_image_only.py  import_hanzilevelup.py  import_pdf.py  rename_image_file.py
srs_sqlite/: __init__.py  __main__.py  api.py  config.py  databases.py  flashcards.py  io.py  tags.py  util.py  views.py
srs_sqlite/static/: card.css  card.js  converter.js  default.js  index.css  index.js  renderer.js
srs_sqlite/templates/: card.html  index.html
